Docker compose testing

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,9 +2,9 @@ FROM python:3.8
 
 WORKDIR /app
 
-COPY api.py requirements.txt ./
+COPY api.py test_api.py requirements.txt ./
 
 RUN pip install -U pip setuptools wheel
 RUN pip install -r requirements.txt
 
-ENTRYPOINT [ "python", "api.py" ]
+ENTRYPOINT [ "pytest" ]
